# discord-rpc

./: CMakeLists.txt  discord-rpc-config.cmake.in
src/: CMakeLists.txt
